[package]
name = "humilis_substream"
build = "./src/build/build.rs"
version = "1.0.0"
rust-version = "1.73"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11.8"
substreams-database-change = "1.3.0"
ethers = "2.0.10"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }

[build-dependencies]
ethers = "2.0.10"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
