[package]
name = "humilis-scripts"
version = "1.0.0"
rust-version = "1.73"
edition = "2021"


[[bin]]
name = "initialize-db"
path = "./src/initialize-db.rs"
test = false
bench = false

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" ] }
humilis-substreams = { path = "../substreams" }
